project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_println_statements/missing_semicolon.ul
boolea foo() {
    println 1
}
